finally fixed the whitespace

--- a/public/styles.css
+++ b/public/styles.css
@@ -226,7 +226,7 @@ footer{
 .justify{
 	margin-bottom: 6px;
 }
-@media (min-width: 310px) {
+@media (min-width: 320px) {
   .nav-tabs.nav-justified > li {
     display: table-cell;
     width: 1%;
